--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-html>
+<html>
   <header>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
