--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
       $('#instagram-button').on('click', function() {
         // Initialize with your OAuth.io app public key
-        OAuth.initialize('YOUR_OAUTH_KEY');
+        OAuth.initialize('Ff6b6TyqJjRNQFl5TUdc-m0w68g');
         // Use popup for OAuth
         OAuth.popup('instagram').then(instagram => {
         console.log('instagram:', instagram);
