--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         // OAuth provider url
         instagram.get('/v1/users/self').then(data => {
           console.log('self data:', data);
+          console.log(data);
         })
       });
     })
