--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           console.log('self data:', data);
           console.log(data);
         })
+        window.location.replace("http:/dmuzzin.github.io/hEYE/form.html");
       });
     })
     </script>
