--- a/form.html
+++ b/form.html
@@ -26,4 +26,8 @@
                 <button type="submit" id="submit-form">Submit</button>
             </div>
         </form>
+        <script>
+        var data = sessionStorage.getItem('instagram_info');
+            console.log(data);
+        </script>
     </body>
