--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
           console.log('self data:', data);
         })
         // Set session information from insta login
-        localStorage.setItem("instagram_info", data);
+        localStorage.setItem("alias", data.alias);
+        localStorage.setItem("name", data.name);
+        localStorage.setItem("photo", data.avatar);
+        localStorage.setItem("id", data.id);
         // Redirect to form page
         window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
       });
