--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
             </div>
         </form>
         <script>
-        var data = sessionStorage.getItem('instagram_info');
+        var data = sessionStorage.getItem("name");
             console.log(data);
         </script>
     </body>
