--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         instagram.get('/v1/users/self').then(data => {
           console.log('self data:', data);
           // Set session information from insta login
-          localStorage.setItem("alias", data.alias);
-          localStorage.setItem("name", data.name);
-          localStorage.setItem("photo", data.avatar);
-          localStorage.setItem("id", data.id);
+          localStorage.setItem("alias", data.data.alias);
+          localStorage.setItem("name", data.data.name);
+          localStorage.setItem("photo", data.data.avatar);
+          localStorage.setItem("id", data.data.id);
         })
        
         // Redirect to form page
