--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         })
        
         // Redirect to form page
-        window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
+        //window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
       });
     })
     </script>
