--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
           localStorage.setItem("name", data.data.name);
           localStorage.setItem("photo", data.data.avatar);
           localStorage.setItem("id", data.data.id);
+          window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
         })
-       
-        // Redirect to form page
-        //window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
       });
     })
     </script>
