--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           sessionStorage.setItem("name", data.data.name);
           sessionStorage.setItem("photo", data.data.avatar);
           sessionStorage.setItem("id", data.data.id);
+          console.log("asdf:" + sessionStorage.getItem("name"));
           window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
         })
       });
