--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           sessionStorage.setItem("photo", data.data.avatar);
           sessionStorage.setItem("id", data.data.id);
           console.log("asdf:" + sessionStorage.getItem("name"));
-          window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
+          //window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
         })
       });
     })
