--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         // OAuth provider url
         instagram.get('/v1/users/self').then(data => {
           console.log('self data:', data);
-          console.log(data["name"]);
-          console.log(data["alias"]);
+          console.log(data.data.name);
+          console.log(data.data.alias);
           console.log(data.avatar);
           // Set session information from insta login
           sessionStorage.setItem("alias", data.alias);
