--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
           sessionStorage.setItem("name", data.data.full_name);
           sessionStorage.setItem("photo", data.data.profile_picture);
           sessionStorage.setItem("id", data.data.id);
-          console.log(sessionStorage.getItem("photo"));
-          //window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
+          window.location.href = "http:/dmuzzin.github.io/hEYE/form.html";
         })
       });
     })
