--- a/form.html
+++ b/form.html
@@ -27,7 +27,9 @@
             </div>
         </form>
         <script>
-        var data = sessionStorage.getItem("name");
-            console.log(data);
+            console.log(sessionStorage.get("alias"));
+            console.log(sessionStorage.get("name"));
+            console.log(sessionStorage.get("photo"));
+            console.log(sessionStorage.get("id"));
         </script>
     </body>
