--- a/form.html
+++ b/form.html
@@ -27,9 +27,9 @@
             </div>
         </form>
         <script>
-            console.log(sessionStorage.get("alias"));
-            console.log(sessionStorage.get("name"));
-            console.log(sessionStorage.get("photo"));
-            console.log(sessionStorage.get("id"));
+            console.log(sessionStorage.getItem("alias"));
+            console.log(sessionStorage.getItem("name"));
+            console.log(sessionStorage.getItem("photo"));
+            console.log(sessionStorage.getItem("id"));
         </script>
     </body>
