--- a/form.html
+++ b/form.html
@@ -7,19 +7,20 @@
     <body>
         <form id="test-form">
             <div>
-                <label>Field 1</label>
+                <label>Instagram Handle</label>
                 <input type="text" name="form_field_1" placeholder="Field 1" />
             </div>
+            <h1>On a scale of 1-10, how much do you agree with the following:
             <div>
-                <label>Field 2</label>
+                <label>I had a great experience with this person.</label>
                 <input type="text" name="form_field_2" placeholder="Field 2" />
             </div>
             <div>
-                <label>Field 3</label>
+                <label>I felt a connection with this person.</label>
                 <input type="text" name="form_field_3" placeholder="Field 3" />
             </div>
             <div>
-                <label>Field 4</label>
+                <label>I’d love to talk to this person after the event.</label>
                 <input type="text" name="form_field_4" placeholder="Field 4" />
             </div>
             <div>
