--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
                 <label>Instagram Handle</label>
                 <input type="text" name="form_field_1" placeholder="Field 1" />
             </div>
-            <h1>On a scale of 1-10, how much do you agree with the following:
+            <h1>On a scale of 1-10, how much do you agree with the following:</h1>
             <div>
                 <label>I had a great experience with this person.</label>
                 <input type="text" name="form_field_2" placeholder="Field 2" />
