--- a/form.html
+++ b/form.html
@@ -29,7 +29,7 @@
         </form>
         <script>
             var namenode = document.createElement("p");
-            var textnode = document.createTextNode("Hello: " + sessionStorage.getItem("name");
+            var textnode = document.createTextNode("Hello: " + sessionStorage.getItem("name"));
             namenode.appendChild(textnode);
             document.body.prependChild(namenode);
             
