--- a/form.html
+++ b/form.html
@@ -35,8 +35,8 @@
             
             var propic=document.createElement('img');
             propic.src=sessionStorage.getItem("photo");
-            propic.width=100px;
-            propic.height=100px;
+            propic.width=100;
+            propic.height=100;
             document.body.prependChild(propic);
             
             console.log(sessionStorage.getItem("alias"));
