--- a/form.html
+++ b/form.html
@@ -153,7 +153,7 @@
             namenode.appendChild(textnode);
             document.body.prepend(namenode);
 
-            document.getElementById("myImg").src = sessionStorage.getItem("photo");
+            document.getElementById("prof").src = sessionStorage.getItem("photo");
 
             console.log(sessionStorage.getItem("alias"));
             console.log(sessionStorage.getItem("name"));
