--- a/form.html
+++ b/form.html
@@ -37,7 +37,7 @@
                     Hello
                 </span>
                 <span class="contact100-form-title">
-                    <img id="prof" src="" style="width:100px;height:100px;">
+                    <img id="prof" src="" style="width:150px;height:150px;border-radius:50%;">
                 </span>
 
                 <div class="wrap-input100 validate-input" data-validate="Name is required">
