--- a/form.html
+++ b/form.html
@@ -37,6 +37,7 @@
                 <span class="contact100-form-title">
                     <img id="prof" src="" style="width:150px;height:150px;border-radius:50%;">
                 </span>
+                <p id="unique-id" style="text-align: center; padding-bottom: 20px"><strong>Your unique ID is: </strong></p>
 
                 <div class="wrap-input100 validate-input" data-validate="Potential match's ID is required">
                     <span class="label-input100">Potential Match</span>
@@ -153,6 +154,7 @@
 
     <!-- Add user specific styling to form -->
     <script>
+        document.getElementById("unique-id").innerHTML = "<strong>Your ID is: " + sessionStorage.getItem("id") + "</strong>";
         document.getElementById("prof").src = sessionStorage.getItem("photo");
         document.getElementById("name-title").innerHTML = "Hello, " + sessionStorage.getItem("name");
     </script>
