--- a/form.html
+++ b/form.html
@@ -144,7 +144,6 @@
     <!--===============================================================================================-->
     <script src="vendor/countdowntime/countdowntime.js"></script>
     <!--===============================================================================================-->
-    <script src="js/main.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13">
@@ -172,10 +171,11 @@
                 url: url,
                 method: "GET",
                 dataType: "json",
-                data: formData
-            }).success(
-                // Redirect user to form page
-                window.location.href = "http:/dmuzzin.github.io/hEYE/form.html"
-            );
+                data: formData,
+                success: function () {
+                    // Redirect user to form page
+                    window.location.href = "http:/dmuzzin.github.io/hEYE/form.html"
+                }
+            });
         })
     </script>
