--- a/form.html
+++ b/form.html
@@ -50,7 +50,7 @@
                 <div class="wrap-input100 input100-select">
                     <span class="label-input100">I felt a connection with this person.</span>
                     <div>
-                        <select class="selection-2" name="connection_rating">
+                        <select class="selection-2" name="connection_rating" form="match-form">
                             <option value="EMPTY">1: Strongly Disagree -- 10: Strongly Agree</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -70,7 +70,7 @@
                 <div class="wrap-input100 input100-select">
                     <span class="label-input100">I had a great experience with this person.</span>
                     <div>
-                        <select class="selection-2" name="experience_rating">
+                        <select class="selection-2" name="experience_rating" form="match-form">
                             <option value="EMPTY">1: Strongly Disagree -- 10: Strongly Agree</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -90,7 +90,7 @@
                 <div class="wrap-input100 input100-select">
                     <span class="label-input100">I’d love to talk to this person after the event.</span>
                     <div>
-                        <select class="selection-2" name="meet_rating">
+                        <select class="selection-2" name="meet_rating" form="match-form">
                             <option value="EMPTY">1: Strongly Disagree -- 10: Strongly Agree</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
