--- a/form.html
+++ b/form.html
@@ -50,8 +50,8 @@
                 <div class="wrap-input100 input100-select">
                     <span class="label-input100">I felt a connection with this person.</span>
                     <div>
-                        <select class="selection-2" name="connection_rating" form="match-form">
-                            <option value="EMPTY">1: Strongly Disagree -- 10: Strongly Agree</option>
+                        <select class="selection-2" name="connection_rating">
+                            <option value="default">1: Strongly Disagree -- 10: Strongly Agree</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -70,8 +70,8 @@
                 <div class="wrap-input100 input100-select">
                     <span class="label-input100">I had a great experience with this person.</span>
                     <div>
-                        <select class="selection-2" name="experience_rating" form="match-form">
-                            <option value="EMPTY">1: Strongly Disagree -- 10: Strongly Agree</option>
+                        <select class="selection-2" name="experience_rating">
+                            <option value="default">1: Strongly Disagree -- 10: Strongly Agree</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -90,8 +90,8 @@
                 <div class="wrap-input100 input100-select">
                     <span class="label-input100">I’d love to talk to this person after the event.</span>
                     <div>
-                        <select class="selection-2" name="meet_rating" form="match-form">
-                            <option value="EMPTY">1: Strongly Disagree -- 10: Strongly Agree</option>
+                        <select class="selection-2" name="meet_rating" id="meet_rating">
+                            <option value="default">1: Strongly Disagree -- 10: Strongly Agree</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -160,23 +160,4 @@
         document.getElementById("unique-id").innerHTML = "<strong>Your ID is: " + sessionStorage.getItem("id") + "</strong>";
         document.getElementById("prof").src = sessionStorage.getItem("photo");
         document.getElementById("name-title").innerHTML = "Hello, " + sessionStorage.getItem("name");
-    </script>
-
-    <!-- Script to submit form to Google Sheets-->
-    <script>
-        var url = 'https://script.google.com/macros/s/AKfycbyTwlhVTE2qflgS9Z2kyu0UnMedG4PsuOrRXfI-DFrIyLQI35XJ/exec'
-        var formData = JSON.parse(JSON.stringify(jQuery('#match-form').serializeArray()))
-        $('#submit-form').on('click', function (e) {
-            e.preventDefault();
-            var jqxhr = $.ajax({
-                url: url,
-                method: "GET",
-                dataType: "json",
-                data: formData,
-                success: function () {
-                    // Redirect user to form page
-                    window.location.href = "http:/dmuzzin.github.io/hEYE/form.html"
-                }
-            });
-        })
     </script>
