--- a/form.html
+++ b/form.html
@@ -90,7 +90,7 @@
                 <div class="wrap-input100 input100-select">
                     <span class="label-input100">I’d love to talk to this person after the event.</span>
                     <div>
-                        <select class="selection-2" name="meet_rating" id="meet_rating">
+                        <select class="selection-2" name="meet_rating">
                             <option value="default">1: Strongly Disagree -- 10: Strongly Agree</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
