--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
 <body>
     <div class="container-contact100">
         <div class="wrap-contact100">
-            <form class="contact100-form validate-form" id="match-form">
+            <form class="contact100-form" id="match-form">
                 <span class="contact100-form-title" id="name-title">
                     Hello
                 </span>
@@ -145,6 +145,7 @@
     <script src="vendor/countdowntime/countdowntime.js"></script>
     <!--===============================================================================================-->
     <script src="js/main.js"></script>
+    <script src="js/serialize.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13">
