--- a/form.html
+++ b/form.html
@@ -110,7 +110,7 @@
                 <div class="container-contact100-form-btn">
                     <div class="wrap-contact100-form-btn">
                         <div class="contact100-form-bgbtn"></div>
-                        <button class="contact100-form-btn" id="submit-form">
+                        <button type="submit" class="contact100-form-btn" id="submit-form">
                             <span>
                                 Submit
                                 <i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
